--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -3355,3 +3355,15 @@ series={Graduate studies in mathematics},
   abstract = {This paper explores the knowledge of linguistic structure learned by large artificial neural networks, trained via self-supervision, whereby the model simply tries to predict a masked word in a given context. Human language communication is via sequences of words, but language understanding requires constructing rich hierarchical structures that are never observed explicitly. The mechanisms for this have been a prime mystery of human language acquisition, while engineering work has mainly proceeded by supervised learning on treebanks of sentences hand labeled for this latent structure. However, we demonstrate that modern deep contextual language models learn major aspects of this structure, without any explicit supervision. We develop methods for identifying linguistic hierarchical structure emergent in artificial neural networks and demonstrate that components in these models focus on syntactic grammatical relationships and anaphoric coreference. Indeed, we show that a linear transformation of learned embeddings in these models captures parse tree distances to a surprising degree, allowing approximate reconstruction of the sentence tree structures normally assumed by linguists. These results help explain why these models have brought such large improvements across many language-understanding tasks.},
   file = {/Users/jpvigneaux/Zotero/storage/QBA2SQFD/Manning et al. - 2020 - Emergent linguistic structure in artificial neural networks trained by self-supervision.pdf}
 }
+
+@article{Winsor2022,
+  title = {Re-{{Examining LayerNorm}}},
+  author = {Winsor, Eric},
+  year = {2022},
+  month = dec,
+  urldate = {2025-05-20},
+  abstract = {Please check out the colab notebook for interactive figures and more detailed technical explanations. {\dots}},
+  langid = {english},
+  keywords = {interpretability},
+  file = {/Users/jpvigneaux/Zotero/storage/DKCGSW2F/re-examining-layernorm.html}
+}
