Updated research section; divided it in various pages.

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -3367,3 +3367,21 @@ series={Graduate studies in mathematics},
   keywords = {interpretability},
   file = {/Users/jpvigneaux/Zotero/storage/DKCGSW2F/re-examining-layernorm.html}
 }
+
+@misc{Jha2025,
+  title = {Harnessing the {{Universal Geometry}} of {{Embeddings}}},
+  author = {Jha, Rishi and Zhang, Collin and Shmatikov, Vitaly and Morris, John X.},
+  year = {2025},
+  month = may,
+  number = {arXiv:2505.12540},
+  eprint = {2505.12540},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2505.12540},
+  urldate = {2025-06-05},
+  abstract = {We introduce the first method for translating text embeddings from one vector space to another without any paired data, encoders, or predefined sets of matches. Our unsupervised approach translates any embedding to and from a universal latent representation (i.e., a universal semantic structure conjectured by the Platonic Representation Hypothesis). Our translations achieve high cosine similarity across model pairs with different architectures, parameter counts, and training datasets. The ability to translate unknown embeddings into a different space while preserving their geometry has serious implications for the security of vector databases. An adversary with access only to embedding vectors can extract sensitive information about the underlying documents, sufficient for classification and attribute inference.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Machine Learning},
+  file = {/Users/jpvigneaux/Zotero/storage/7TR2ZL3A/Jha et al. - 2025 - Harnessing the Universal Geometry of Embeddings.pdf;/Users/jpvigneaux/Zotero/storage/ISTKZRSS/2505.html},
+  howpublished = {arXiv preprint \texttt{arXiv:2505.12540}}
+}
